# leasing_office

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: config.py  db.py  main.py  models.py  ratelimit.py  schemas.py  security.py  seed.py
apps/api/app/prompts/: chatbot_system.md
apps/api/app/routers/: admin.py  auth.py  chat.py  estimates.py  floor_plans.py  leads.py  news.py  portal.py
apps/api/app/services/: alerts.py  chatbot.py  leads.py  ollama.py  pricing.py  renewals.py
apps/api/tests/: conftest.py  test_chat.py  test_estimate.py  test_portal.py  test_smoke.py
apps/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/contact/: page.tsx
apps/web/app/estimate/: page.tsx
apps/web/app/floor-plans/: page.tsx
apps/web/app/news/: page.tsx
apps/web/app/office/maintenance/: page.tsx
apps/web/app/portal/: page.tsx
apps/web/app/portal/login/: page.tsx
apps/web/components/: chat-widget.tsx  contact-form.tsx  estimate-wizard.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
apps/web/lib/: api.ts  portal.ts  utils.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/worker/: celery_app.py  tasks.py
