[project]
name = "auburn-api"
version = "0.1.0"
description = "Auburn Ridge leasing platform — FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.2",
    "redis>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["prompts/*.md"]

[tool.ruff]
line-length = 100
